--- a/index.html
+++ b/index.html
@@ -4,15 +4,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guides so that you can practice, practice, practice.</title>
+    <title>Prework Study Guides.</title>
   </head>
   <body>
-    <header id="Headers">
+    <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Within the main body of the html document you need bullet points and these are as follows</li>
+          <li>List Item</li>
+          <li>ul-unordered list</li>
+          <li>ol-ordered lists</li>
+          <li>There are also header tags that are needed in the body of an html document</li>
+          <li>Headers are numbers 1-6 with h going before the number</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+      
+        </ul>
+
+
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li>Enter your Javascript notes here</li>
+        </ul>
+
+      </section>
+
+
     </main>
 
     <footer>
