--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <ul>
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>"console.log" is used to test the interactivity of your website. This is done in the console of a page after right clicking 'inspect'</li>
         </ul>
 
       </section>
