added new lines of cofe to the HTML section for better reference

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
+      <section class="card" id="remember-section">
+        <h2>Things to keep in mind throughout this work</h2>
+        <ul>
+          <li>Remeber to keep a growth mindset: When you're stuck, try using the word "yet." For example, think or say "I don’t understand how to call a function yet.</li>
+          <li></li>
+        </ul>
+      </section>
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
