--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guides.</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
+      <section class="card" id="remember-section">
+        <h2>Things to keep in mind throughout this work</h2>
+        <ul>
+          <li>Remeber to keep a growth mindset: When you're stuck, try using the word "yet." For example, think or say "I don’t understand how to call a function yet.</li>
+          <li></li>
+        </ul>
+      </section>
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
@@ -28,7 +37,9 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A Margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          
         </ul>
       </section>
 
@@ -46,7 +57,9 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>"console.log" is used to test the interactivity of your website. This is done in the console of a page after right clicking 'inspect'</li>
         </ul>
 
       </section>
@@ -57,5 +70,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
