added 'things to remember' section to the prework study guide

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <h2>Things to keep in mind throughout this work</h2>
         <ul>
           <li>Remeber to keep a growth mindset: When you're stuck, try using the word "yet." For example, think or say "I don’t understand how to call a function yet.</li>
-          <li></li>
+          <li>Be willing to make mistakes, they are going to happen</li>
+          <li>View "Problems" as Opportunities</li>
         </ul>
       </section>
       <section class="card" id="html-section">
