Adding in new notes to the HTML code for prework study guide

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </header>
     <main>
       <section class="card" id="remember-section">
-        <h2>Things to keep in mind throughout this work</h2>
+        <h2><b>Things to keep in mind throughout this work</b></h2>
         <ul>
           <li>Remeber to keep a growth mindset: When you're stuck, try using the word "yet." For example, think or say "I don’t understand how to call a function yet.</li>
-          <li>Be willing to make mistakes, they are going to happen</li>
-          <li>View "Problems" as Opportunities</li>
+          <li><b>Be willing to make mistakes, they are going to happen</b></li>
+          <li>View <i>"Problems"</i> as <b>Opportunities</b></li>
         </ul>
       </section>
       <section class="card" id="html-section">
@@ -27,12 +27,17 @@
         <ul>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
-          <li>Within the main body of the html document you need bullet points and these are as follows</li>
-          <li>List Item</li>
-          <li>ul-unordered list</li>
-          <li>ol-ordered lists</li>
-          <li>There are also header tags that are needed in the body of an html document</li>
-          <li>Headers are numbers 1-6 with h going before the number</li>
+          <li>Commonly used elements to add content to pages: Text, Image, Header, List Elements</li>
+          <li>In addition to elements that can be seen on a page, elements are also used to divide the content on the page and to describe the content to browsers. Common elemet types that are used to divide and describe are: Meta-related, Content division, Semantic Elements</li>
+          <li>Each HTML element performs a unique role. However, two elements are especially important to understanding how the structure works: the head and body elements</li>
+            <dd>- The <i><b>head</i></b> element contains information, or metadata, that helps the browser to render the page correctly. Elements included within the <i>head</i> are not visible when a user looks at a webpage</dd>
+            <dd>- The <i><b>body</i></b> element contains the content that is shown to the user. All the elements that we want the user to see and interact with must be placed inside this element.</dd>
+          <li>List Items:</li>
+            <dd>- ul-unordered list</dd>
+            <dd>- ol-Ordered lists</dd>
+          <li>There are also header tags that are needed in the body of an html document.</li>
+          <li>Headers are numbers 1-6 with H going before the number.</li>
+          <li></li>
         </ul>
       </section>
       <section class="card" id="css-section">
