Added notes about CSS style sheets

--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
             <dd>- ol-Ordered lists</dd>
           <li>There are also header tags that are needed in the body of an html document.</li>
           <li>Headers are numbers 1-6 with H going before the number.</li>
-          <li></li>
+          <li><b>Metadata</b>:
+            <dd>- Data about or webpage that the browser uses to effectively serve our webpage to users.</dd>
+            <dd>- Typically not seen by users, but i contains important information about accessibility, search engine, and performance.</dd>
+          <li>Inside the <i>head</i> element, we can use the following metadata tags:</li>
+            <dd>Style element defines the CSS styles associated with a website.</dd>
+            <dd>Base element defines the base URL for a webpage.</dd>
+            <dd>Link element connects an external resource to the HTML document.</dd>
+            <dd>Script element embeds client-side scripts in the HTML document.</dd>
+          </li>
         </ul>
       </section>
       <section class="card" id="css-section">
@@ -45,7 +53,10 @@
         <ul>
           <li>A Margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
-          
+          <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet</li>
+          <li>When a developer wants to style an element directly in the HTML file, they use <b>inline CSS</b>. Inline styles apply to a specific HTML tag, using a style attribute with a CSS rule to style a particular page element only.</li>
+          <li>Inline CSS and internal style sheets are totally acceptable methods under certain conditions, but the most common way to style a webpage is by using an external CSS style sheet.</li>
+          <li>a selector <i><b>div</b></i> defines the element or attributes to which the rules, or declarations, will apply</li>
         </ul>
       </section>
 
