--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h2><b>Things to keep in mind throughout this work</b></h2>
         <ul>
           <li>Remeber to keep a growth mindset: When you're stuck, try using the word "yet." For example, think or say "I don’t understand how to call a function yet.</li>
-          <li><b>Be willing to make mistakes, they are going to happen</b></li>
-          <li>View <i>"Problems"</i> as <b>Opportunities</b></li>
+          <li><b>Be willing to make mistakes, they are going to happen.</b></li>
+          <li>View <i>"Problems"</i> as <b>Opportunities.</b></li>
         </ul>
       </section>
       <section class="card" id="html-section">
@@ -33,8 +33,8 @@
             <dd>- The <i><b>head</i></b> element contains information, or metadata, that helps the browser to render the page correctly. Elements included within the <i>head</i> are not visible when a user looks at a webpage</dd>
             <dd>- The <i><b>body</i></b> element contains the content that is shown to the user. All the elements that we want the user to see and interact with must be placed inside this element.</dd>
           <li>List Items:</li>
-            <dd>- ul-unordered list</dd>
-            <dd>- ol-Ordered lists</dd>
+            <dd>- ul-unordered list.</dd>
+            <dd>- ol-Ordered lists.</dd>
           <li>There are also header tags that are needed in the body of an html document.</li>
           <li>Headers are numbers 1-6 with H going before the number.</li>
           <li><b>Metadata</b>:
@@ -64,7 +64,12 @@
         <h2>Git</h2>
         <ul>
           <li>git status: checks what branch we are currently on</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+          <li>git flow:</li>
+          <dd>- git add -A</dd>
+          <dd>- git commit -m "be sure to add comments on updates".</dd>
+          <dd>- git pull origin main.</dd>
+          <dd>- git push origin (INSERT BRANCH NAME).</dd>
       
         </ul>
 
@@ -77,6 +82,7 @@
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
           <li>"console.log" is used to test the interactivity of your website. This is done in the console of a page after right clicking 'inspect'</li>
+          <li>Browser Application Interface (API)</li>
         </ul>
 
       </section>
